doc: comment on -bdf for inetd mode

--- a/configs/system-integration/systemd/inetd/exim@.service
+++ b/configs/system-integration/systemd/inetd/exim@.service
@@ -5,6 +5,8 @@ Documentation=https://exim.org/docs.html
 
 [Service]
 Type=exec
+# We can't use -odf, as this would ask exim to keep the connection
+# from the client open until the delivery is done
 ExecStart=exim -bs
 
 StandardInput=socket
